Run with other variations of parameters.