@@ -6,8 +6,8 @@ date=`date "+%Y%m%dT%H%M"`
 result_path="$pwd/results/$date-$rev"
 target_path="/home/jswalens/ecoop-2016-results/$date-$rev"
 
-pars="-n 4 -r 512"
-#gc_opts="-XX:+UseG1GC"
+#pars="-n 4 -r 512"
+gc_opts="-XX:+UseG1GC"
 
 lein=$pwd/lein
 
@@ -23,20 +23,20 @@ cd $pwd/bayes-8
 
 for i in {1..3}
 do
-  for gc_opts in "" "-XX:+UseG1GC" "-XX:+UseConcMarkSweepGC -XX:-UseParNewGC" "-XX:+UseConcMarkSweepGC -XX:+UseParNewGC" "-XX:+UseParallelGC"
+  for pars in "-n 5 -r 64" "-n 5 -r 128" "-n 5 -r 256" "-n 5 -r 512"
   do
-    gc_filename="${gc_opts// /_}"
-    for v in 8 16 32 64 # 128
+    pars_filename="${pars// /_}"
+    for v in 2 4 8 16 24 32 48 64
     do
-      for t in 1 2 4 8 16 32 64
+      for t in 1 2 3 4 8 16 24 32
       do
         echo "i=$i; v=$v; t=$t; parameters=$pars; gc_opts=$gc_opts"
         variation=""
         echo "variation=$variation"
-        JVM_OPTS="$gc_opts" $lein run $pars -v $v -t $t               > $result_path/$variation-$gc_filename-v$v-t$t-i$i.txt
+        JVM_OPTS="$gc_opts" $lein run $pars -v $v -t $t               > $result_path/$variation-$pars_filename-v$v-t$t-i$i.txt
         variation="alternatives-parallel"
         echo "variation=$variation"
-        JVM_OPTS="$gc_opts" $lein run $pars -v $v -t $t -x $variation > $result_path/$variation-$gc_filename-v$v-t$t-i$i.txt
+        JVM_OPTS="$gc_opts" $lein run $pars -v $v -t $t -x $variation > $result_path/$variation-$pars_filename-v$v-t$t-i$i.txt
       done
     done
   done
